bin_PROGRAMS = easyrpg-player
easyrpg_player_SOURCES = \
	al_audio.cpp \
	android_ui.cpp \
	audio.cpp \
	background.cpp \
	baseui.cpp \
	battle_actions.cpp \
	battle_algorithms.cpp \
	battle_animation.cpp \
	battle_battler.cpp \
	bitmap.cpp \
	bitmap_screen.cpp \
	bitmap_utils.cpp \
	bot_ui.cpp \
	cache.cpp \
	color.cpp \
	effects.cpp \
	filefinder.cpp \
	font.cpp \
	font_pearl_8x8.cpp \
	font_render_8x8.cpp \
	game_actor.cpp \
	game_actors.cpp \
	game_battle.cpp \
	game_battler.cpp \
	game_character.cpp \
	game_commonevent.cpp \
	game_enemy.cpp \
	game_event.cpp \
	game_interpreter_battle.cpp \
	game_interpreter.cpp \
	game_interpreter_map.cpp \
	game_map.cpp \
	game_message.cpp \
	game_party.cpp \
	game_picture.cpp \
	game_player.cpp \
	game_screen.cpp \
	game_system.cpp \
	game_targets.cpp \
	game_temp.cpp \
	game_troop.cpp \
	game_unit.cpp \
	game_vehicle.cpp \
	graphics.cpp \
	hslrgb.cpp \
	image_bmp.cpp \
	image_jpg.cpp \
	image_png.cpp \
	image_xyz.cpp \
	input_buttons_desktop.cpp \
	input_buttons_dingoo.cpp \
	input_buttons_gekko.cpp \
	input_buttons_gph.cpp \
	input_buttons_psp.cpp \
	input.cpp \
	lua_bot.cpp \
	main.cpp \
	main_data.cpp \
	output.cpp \
	plane.cpp \
	player.cpp \
	rect.cpp \
	registry.cpp \
	scene_actortarget.cpp \
	scene_battle.cpp \
	scene.cpp \
	scene_end.cpp \
	scene_equip.cpp \
	scene_file.cpp \
	scene_gameover.cpp \
	scene_item.cpp \
	scene_load.cpp \
	scene_logo.cpp \
	scene_map.cpp \
	scene_menu.cpp \
	scene_name.cpp \
	scene_order.cpp \
	scene_save.cpp \
	scene_shop.cpp \
	scene_skill.cpp \
	scene_status.cpp \
	scene_title.cpp \
	sdl_audio.cpp \
	sdl_ui.cpp \
	sprite_character.cpp \
	sprite.cpp \
	spriteset_map.cpp \
	text.cpp \
	tilemap.cpp \
	tilemap_layer.cpp \
	tone.cpp \
	utils.cpp \
	util_win.cpp \
	window_actorinfo.cpp \
	window_actorstatus.cpp \
	window_actortarget.cpp \
	window_base.cpp \
	window_battlecommand.cpp \
	window_battleitem.cpp \
	window_battleoption.cpp \
	window_battleskill.cpp \
	window_battlestatus.cpp \
	window_command.cpp \
	window.cpp \
	window_equip.cpp \
	window_equipitem.cpp \
	window_equipstatus.cpp \
	window_face.cpp \
	window_gold.cpp \
	window_help.cpp \
	window_item.cpp \
	window_keyboard.cpp \
	window_menustatus.cpp \
	window_message.cpp \
	window_name.cpp \
	window_numberinput.cpp \
	window_savefile.cpp \
	window_selectable.cpp \
	window_shopbuy.cpp \
	window_shop.cpp \
	window_shopnumber.cpp \
	window_shopparty.cpp \
	window_shopsell.cpp \
	window_shopstatus.cpp \
	window_skill.cpp \
	window_skillstatus.cpp \
	window_targetstatus.cpp \
	zobj.cpp \
	../lib/shinonome/gothic.cxx \
	../lib/shinonome/mincho.cxx
easyrpg_player_LDADD = $(READERS_LIB)
AM_CXXFLAGS = -I$(srcdir)/../lib/shinonome
